Css Learning Day2

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div>
-    <p class="paragraph">this is my first css repo!</p>
-</div>
+    <section>
+        <div>
+            <p class="paragraph">this is my first css repo!</p>
+         </div>
+
+         <div>
+            <p class="H2class"><span id="logo">E</span>xplore the language As you want</p>
+         </div>
+    </section>
 </body>
 </html>
