Css Learning Day2

--- a/index.html
+++ b/index.html
@@ -14,8 +14,22 @@
          </div>
 
          <div>
-            <p class="H2class"><span id="logo">E</span>xplore the language As you want</p>
+            <p class="h2class"><span id="logo">E</span>xplore the language As you want</p>
          </div>
+        
+
+        <div>
+            <p class="info">Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML).[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
+        </div>
+
+        
+        <div>
+            <ul>
+            <li>Cascading</li>
+            <li>Style</li>
+            <li>Sheet</li>
+            </ul>
+        </div>
     </section>
 </body>
 </html>
