Css Learning Day3

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+            background-color: azure;
+            opacity:0.5;
+        }
+    </style>
 </head>
 <body>
     <section>
@@ -14,7 +20,7 @@
          </div>
 
          <div>
-            <p class="h2class"><span id="logo">E</span>xplore the language As you want</p>
+            <p class="h2class"><span id="logo_1">E</span>xplore the language As you want</p>
          </div>
         
 
@@ -22,7 +28,7 @@
             <p class="info">Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML).[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
         </div>
 
-        
+
         <div>
             <ul>
             <li>Cascading</li>
@@ -30,6 +36,13 @@
             <li>Sheet</li>
             </ul>
         </div>
+
+        <div>
+            <p style="color: darkgreen;font-size: 20px;font-family: cursive;text-transform: uppercase";>Shaikh Mohammed Faiz Mohammed Ibrahim</p>
+        </div>
+    </section>
+    <section>
+        <img class="sample_image" src="images/sample1.jpg" alt="sample_image">
     </section>
 </body>
 </html>
